2008-09-08  Todd M. Helfter  <tmh@users.sourceforge.net>

	* doc/menu.n: fix typo in docs [Bug 2098425]

2008-09-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Dropped use of _ANSI_ARGS_ macro to preserve
	* generic/tkSelect.h:	Tk's TCL_NO_DEPRECATED build.

2008-08-30  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* tests/textWind.test: Update to tcltest2
	* tests/unixSelect.test:
	* tests/visual_bb.test:
	* tests/visual.test:
	* tests/window.test:
	* tests/winfo.test:
	* tests/xmfbox.test:
	* tests/winButton.test:
	* tests/winDialog.test:
	* tests/winFont.test:
	* tests/winMenu.test:
	* tests/winMsbox.test:
	* tests/winWm.test:

2008-08-28  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkConfig.sh.in:  Added @XFT_LIBS@ to the definition of TK_LIBS
	to avoid link failures when a "big wish" program links against a
	--disable-shared build of libtk.  (Discovered building expectTk).

	* generic/tkImgPhoto.c:	Changed TclStack* calls to ck* calls so that
	we don't create new dependencies on Tcl internals.

	* unix/tkUnixPort.h:	Removed #include of tclInt.h that has been
	* win/tkWinPort.h:	disabled for three years.  If we needed this
	we'd have noticed by now.

	* README:		Bump version number to 8.6a3
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-08-28  Donal K. Fellows  <dkf@users.sf.net>

	* tests/imgPhoto.test: Fix failures. [Bug 2080587]

2008-08-28  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* tests/option.test: Update to tcltest2
	* tests/place.test:
	* tests/scale.test:
	* tests/select.test:
	* tests/textBTree.test:
	* tests/textImage.test:
	* tests/textMark.test:
	* tests/textTag.test:
	* tests/unixMenu.test:

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: fix typo from [Bug 1023955]

2008-08-27  Peter Spjuth  <peter.spjuth@gmail.com>
